Wrapped master page content in div targeteable by Vue, and fixed the css breaking after that.

--- a/resources/assets/sass/document/_master.scss
+++ b/resources/assets/sass/document/_master.scss
@@ -10,7 +10,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+.document-content {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
@@ -21,6 +21,7 @@ body {
   }
 }
 
-main{
+.document-content > main{
+  padding: 1rem 0;
   flex: 1;
 }
